edited css for groups to prevent overlap

--- a/src/css/view.css
+++ b/src/css/view.css
@@ -10,7 +10,7 @@ body {
 
 #groups {
 	position: absolute;
-	top: 28px;
+	top: 40px;
 	right: 42px;
 	bottom: 4px;
 	left: 4px;
